[feature] 녹음 시간 표시 View 추가 + 음성 시각화 기능 완성 + gitignore 업데이트

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         app:layout_constraintTop_toTopOf="@id/recordButton"
         app:layout_constraintBottom_toBottomOf="@id/recordButton"/>
 
-    <TextView
+    <com.clonecoding.recorder_clonecoding.CountUpTextView
         android:id="@+id/recordTimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
